--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-light bg-light full-text" role="navigation" id="nav">
+
+     <section class="left">
+      <ul class="nav nav-pills">
+       <li class="nav-item"><a class="nav-link" href="#carousel">Home</a>
+       </li>
+     </section>
+
+     <section class="right">
+      <ul class="nav nav-pills">
+       <li class="nav-item"><a class="nav-link" href="#work-section">Work</a>
+       <li class="nav-item"><a class="nav-link" href="#about"><i class="fas fa-book-reader"></i> About</a>
+       <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a>
+       <li class="nav-item"><a class="nav-link" href="#contact"><i class="fas fa-phone"></i> Contact</a>
+      </li>
+      <!-- <a href="#about"><i class="fas fa-book-reader"></i> About</a>
+      <a href="#contact"><i class="fas fa-phone"></i> Contact</a>
+      <a href="#faq">FAQ</a> -->
+     </section>
+
+  </nav>
+
+  <footer>
+    &copy; 2019 Klad Consulting
+  </footer>
     <%= yield %>
   </body>
 </html>
