--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,2 +1,3 @@
-<h1>SimplePages#index</h1>
-<p>Find me in app/views/simple_pages/index.html.erb</p>
+<h1 class= "index">Action figurines</h1>
+<%= image_tag("row (7).jpg", class: "img-fluid") %>
+<p>We look forward to hearing from you</p>
