--- a/app/views/simple_pages/index.html.erb
+++ b/app/views/simple_pages/index.html.erb
@@ -1,3 +1,34 @@
-<h1 class= "index">Vacation destinations</h1>
-<%= image_tag("row (7).jpg", class: "img-fluid") %>
+<div class="page-wrap" id="landing_page">
+
+  <div id="carousel_landing_page" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carousel_landing_page" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel_landing_page" data-slide-to="1"></li>
+      <li data-target="#carousel_landing_page" data-slide-to="2"></li>
+    </ol>
+
+    <div class="carousel-inner">
+      <% @products.each do |product| %>
+      <div class="carousel-item <%= "active" if product == @products.first %>">
+        <%= image_tag(product.image_url, class: "img-fluid", id: "carousel_images") %>
+
+        <div class="carousel-caption d-none d-md-block">
+          <h5><%= link_to product.name, product %></h5>
+          <p><%= link_to product.price, product %></p>
+        </div>
+      </div>
+      <% end %>
+    </div>
+
+    <a class="carousel-control-prev" href="#carousel_landing_page" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel_landing_page" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
 <p>We look forward to hearing from you</p>
