--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,9 +2,11 @@
 
 <h1 class="product-index">Products</h1>
 
+<!-- Product menu -->
+
 <div class="container-fluid">
   <div class="row">
-    <%= render partial: "shared/product", collection: @products %>  
+    <%= render partial: "shared/product", collection: @products %>
   </div>
 </div>
 
