colours column and contacts page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,10 +31,10 @@
 
      <section class="right">
       <ul class="nav nav-pills">
-       <li class="nav-item"><a class="nav-link" href="#work-section">Work</a>
-       <li class="nav-item"><a class="nav-link" href="#about"><i class="fas fa-book-reader"></i> About</a>
-       <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a>
-       <li class="nav-item"><a class="nav-link" href="#contact"><i class="fas fa-phone"></i> Contact</a>
+       <li class="nav-item"><a class="nav-link" href="#carousel">Our philosophy</a>
+       <li class="nav-item"><a class="nav-link" href="#carousel"><i class="fas fa-book-reader"></i> About</a>
+       <li class="nav-item"><a class="nav-link" href="#carousel">FAQ</a>
+       <li class="nav-item"><a class="nav-link" href="simple_pages/contact"><i class="fas fa-phone"></i> Contact</a>
       </li>
 
      </section>
