--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -5,7 +5,7 @@
         <a href="#"><h3><%= product.name %></h3></a>
         <%= image_tag(product.image_url, class: "img-fluid") if product.image_url %>
         <p><%= product.description %></p>
-        <p><%= product.color %></p>
+        <p><%= product.colour %></p>
         <strong><td><%= product.price %></td></strong>
         <br>
         <td><%= link_to 'Show', product %></td>
