--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -4,4 +4,67 @@
 
 h1 {
   padding-top: 25px;
-  text-align: center;}
+  text-align: center;
+}
+
+#carousel h5 {
+  font-size: 4em;
+  padding-bottom: 30%;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+#carousel { padding-top: 20px;}
+#carousel img {
+    border: none;
+    border-radius: 0%;
+}
+
+#about {padding-top: 20px;}
+#about .row h2 {text-align: center;}
+#about .header h1 {
+  text-align: center;
+  font-size: 3em;
+  padding-bottom: 20px;
+}
+#about .main-text {
+  padding-top: 30px;
+  font-family: 'Dosis',sans-serif;
+  clear: both;
+  font-weight:200;
+  font-size: 1.2em;
+}
+
+#faq {
+  padding-top: 10px;
+  padding-bottom: 50px;
+}
+#faq .header {
+  padding-bottom: 30px;
+  text-align: center;
+}
+#faq .card-header {
+  background: #F3F3BE;
+  font-family: 'Poppins', sans-serif;
+  color: #29603B;
+  font-size: 1.8em;
+}
+#faq p {
+  font-size: 1em;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  text-shadow: none;
+  color: #29603B;
+}
+#faq .card-header button {
+  font-family: 'Poppins', sans-serif;
+  color: #29603B;
+  font-size: 1.2em;
+  font-weight: 700;
+  margin: auto;
+}
+
+#map1 {
+  height: 300px;
+  width: 100%;
+  border: 10px;
+}
