--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_with(model: product, local: true) do |form| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -11,28 +11,46 @@
     </div>
   <% end %>
 
+<div class="container-fluid">
+  <div class="row">
+   <section class="col-sm-12 col-md-4 col-lg-4">
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= form.label :name %><br>
+    <%= form.text_field :name %>
   </div>
+    </section>
+    <section class="col-sm-12 col-md-4 col-lg-4">
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= form.label :description %><br>
+    <%= form.text_area :description %>
   </div>
+   </section>
+   <section class="col-sm-12 col-md-4 col-lg-4">
   <div class="field">
-    <%= f.label :image_url %><br>
-    <%= f.text_field :image_url %>
+    <%= form.label :image_url %><br>
+    <%= form.text_field :image_url %>
+  </div>
+   </section>
+   <section class="col-sm-12 col-md-4 col-lg-4">
+  <div class="field">
+    <%= form.label :colour %><br>
+    <%= form.text_field :colour %>
+  </div>
+   </section>
+   <section class="col-sm-12 col-md-4 col-lg-4">
+  <div class="field">
+    <%= form.label :price %><br>
+    <%= form.text_field :price %>
+  </div>
+   </section>
+ </section>
+ </div>
+ </div>
+  <div class="actions">
+    <%= form.submit %>
   </div>
 
-  <div class="field">
-    <%= f.label :colour %><br>
-    <%= f.text_field :colour %>
-  </div>
-  <div class="field">
-    <%= f.label :price %><br>
-    <%= f.text_field :price %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
+</section>
+</div>
+</div>
