--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+
   </head>
 
   <body data-spy="scroll" data-target=".navbar" class="bgimg-2">
@@ -46,6 +47,10 @@
     <%= form.text_field :q, id: 'q', value: params[:q] %>
     <%= form.submit 'Search' %>
   <% end %>
+
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
   <%= yield %>
   </div>
 
