--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,25 +45,27 @@
        <%= link_to('Login', new_user_session_path, class: "nav-link") %>
        </li>
        <% end %>
-     </ul>
+      </ul>
 
      </section>
-
     </nav>
 
 
   <div class="search-bar">
-  <%= form_with(url: products_path, method: 'get', local: true) do |form| %>
-    <%= form.label :q, 'Search for:' %>
-    <%= form.text_field :q, id: 'q', value: params[:q] %>
-    <%= form.submit 'Search' %>
-  <% end %>
-
+    <%= form_with(url: products_path, method: 'get', local: true, class: 'search_bar') do |form| %>
+             <%= form.submit 'Search', class: 'btn btn-submit' %>
+             <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-fld' %>
+           <% end %>
 
   </div>
 
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+  <% if notice %>
+    <p id="notice" class="alert alert-primary"><%= notice %></p>
+  <% end %>
+  <% if alert %>
+    <p id="alert" class="alert alert-primary"><%= alert %></p>
+<% end %>
+  
 
   <%= yield %>
   <footer class="footer-section">
