--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,14 +39,12 @@
    color: #6BC9E6;
    font-size: 2.3em;
    font-weight: bold;
-   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
  }
  p, li {
    font-family: 'Poppins', Arial, sans-serif;
    font-weight: 900;
-   font-size: 0.8em;
-   color: #F3F3BE;
-   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+   font-size: 1.5em;
+   color: #0C420E;
    font-size: 1em;
  }
 
