--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,33 @@
-<p id="notice"><%= notice %></p>
+<div class="index-content">
+  <div class="container">
+  <div class="row" data-product-id="<%= @product.id %>">
 
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+    <div class="col-sm-12 col-lg-6 productinfo-left">
+      <%= image_tag(@product.image_url, class: "img-fluid img-zoom", data_zoom_image:@product.image_url) if @product.image_url%>
+      <%= link_to 'Edit', edit_product_path(@product) %> |
+      <%= link_to 'Back', products_path %>
+    </div>
 
-<p>
-  <strong>Description:</strong>
-  <%= @product.description %>
-</p>
+    <div class="col-sm-12 col-lg-6 productinfo-right">
+      <p class="productname-show">
+        <%= @product.name %>
+      </p>
+      <p class="product-gallery-decription">
+        <%= @product.description %>
+      </p>
+      <p class="text-bold">Overview</p>
+      <p class="product-galleryprice-tag">
+        <%= number_to_currency(@product.price, :unit => "€") %>
+      </p>
+      <div class="star-rating">
+        <p>Review score:<div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></p>
+        </div>
+        <% if !@product.highest_rating_comment.nil? %>
+        <%= @product.highest_rating_comment.body %>
+        <% end %>
+      </div>
 
-<p>
-  <strong>Image url:</strong>
-  <%= @product.image_url %>
-</p>
-
-<p>
-  <strong>Colour:</strong>
-  <%= @product.colour %>
-</p>
-
-<p>
-  <strong>Price:</strong>
-  <%= @product.price %>
-</p>
-
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+    </div>
+</div>
+</div>
+</div>
