--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,14 +1,18 @@
 <div class="index-content">
   <div class="container">
-  <div class="row" data-product-id="<%= @product.id %>">
+  <div class="row product" data-product-id="<%= @product.id %>">
 
-    <div class="col-sm-12 col-lg-6 productinfo-left">
+    <div class="col-sm-12 col-md-6 col-lg-6 productinfo-left">
       <%= image_tag(@product.image_url, class: "img-fluid img-zoom", data_zoom_image:@product.image_url) if @product.image_url%>
       <%= link_to 'Edit', edit_product_path(@product) %> |
       <%= link_to 'Back', products_path %>
-    </div>
 
-    <div class="col-sm-12 col-lg-6 productinfo-right">
+    </div>
+    <div class="col-sm-12 col-lg-6">
+    <%= render 'shared/new_comment' %>
+
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-6 productinfo-right">
       <p class="productname-show">
         <%= @product.name %>
       </p>
@@ -20,14 +24,16 @@
         <%= number_to_currency(@product.price, :unit => "€") %>
       </p>
       <div class="star-rating">
-        <p>Review score:<div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></p>
+      <p>Review score:<div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></p>
         </div>
         <% if !@product.highest_rating_comment.nil? %>
         <%= @product.highest_rating_comment.body %>
         <% end %>
+        <%= render 'shared/comments' %>
       </div>
-
     </div>
-</div>
-</div>
+
+   </div>
+  </div>
+
 </div>
