--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,17 +1,7 @@
 <div class="container" id="about">
-  <div class="header">
-    <h1><br>Our Philosophy</h1>
-  </div><!-- end header -->
-  <div class="row">
-   <section class="col-sm-12 col-lg-4">
-     <img src="images/Zonza.jpg" alt="intropic" class="img-fluid">
-   </section>
-   <section class="col-sm-12 col-lg-4">
-    <div class="intro">
-      <h2><br>My Motivation</h2>
-      <p> Our Goal is to make your traveling goals as simple as possible. With a variety of options suitable for every budget. We find the deals so that you don't have to.</p>
-    </div>
-   </section>
+  <div>
+    <h1>Our Philosophy</h1>
+    <p> Our Goal is to make your traveling goals as simple as possible. With a variety of options suitable for every budget. We find the deals so that you don't have to.</p>
    <section class="col-sm-12 col-lg-4">
 
    </section>
