--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,11 +29,7 @@
       <ul class="nav nav-pills">
        <li class="nav-item"><%= link_to("Home", root_path) %>
        </li>
-       <li class="nav-item search-bar"><%= form_with(url: products_path, method: 'get', local: true, class: 'search_bar') do |form| %>
-                 <%= form.submit 'Search', class: 'btn btn-submit' %>
-                 <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-fld' %>
-               <% end %>
-       </li>
+
      </section>
 
      <section class="right">
@@ -44,11 +40,11 @@
        <li class="nav-item"> <%= link_to("Contact", simple_pages_contact_path) %><i class="fas fa-phone"></i>
        <% if user_signed_in? %>
        <li class="nav-item">
-       <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav-link") %>
+       <%= link_to('Logout', destroy_user_session_path) %>
        </li>
        <% else %>
        <li class="nav-item">
-       <%= link_to('Login', new_user_session_path, class: "nav-link") %>
+       <%= link_to('Login', new_user_session_path) %>
        </li>
        <% end %>
       </ul>
@@ -56,7 +52,12 @@
      </section>
     </nav>
 
-
+    <div id="search-bar">
+        <%= form_with(url: products_path, method: 'get', local: true, class: 'search_bar') do |form| %>
+        <%= form.submit 'Search', class: 'btn btn-submit' %>
+        <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-fld' %>
+      <% end %>
+    </div>
   <% if notice %>
     <p id="notice" class="alert alert-primary"><%= notice %></p>
   <% end %>
