--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,15 +38,15 @@
        <li class="nav-item"> <%= link_to("About", simple_pages_about_path) %><i class="fas fa-book-reader"></i>
        <li class="nav-item"> <%= link_to("Products", products_path) %>
        <li class="nav-item"> <%= link_to("Contact", simple_pages_contact_path) %><i class="fas fa-phone"></i>
-       <% if user_signed_in? %>
-       <li class="nav-item">
-       <%= link_to('Logout', destroy_user_session_path) %>
-       </li>
-       <% else %>
-       <li class="nav-item">
-       <%= link_to('Login', new_user_session_path) %>
-       </li>
-       <% end %>
+         <% if user_signed_in? %>
+         <li class="nav-item">
+         <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav") %>
+         </li>
+         <% else %>
+         <li class="nav-item">
+         <%= link_to('Login', new_user_session_path, class: "nav") %>
+         </li>
+         <% end %>
       </ul>
 
      </section>
