--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
 
   <%= yield %>
   <footer class="footer-section">
-      <section class="container text-center">
+      <section class="text-center">
           <h2 class="footer-title">Follow Me</h2>
               <ul class="footer-list">
                   <li><a class="fab fa-facebook" target="_blank" href="https://www.facebook.com/kevin.dath"></a></li>
