--- a/app/views/shared/_new_comment.html.erb
+++ b/app/views/shared/_new_comment.html.erb
@@ -5,9 +5,10 @@
       <%= f.label :body, "Comments" %><br>
       <%= f.text_area :body %>
     </p>
-    <p>
+    <p><div class="rating">
       <%= f.label :rating %><br>
       <%= f.text_field :rating, class: "rating" %>
+      </div>
     </p>
     <p>
       <%= f.submit "Submit" %>
