--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,13 +67,13 @@
 
 
   <%= yield %>
-  <footer class="footer-section">
+  <footer class="container-fluid footer-section">
       <section class="text-center">
           <h2 class="footer-title">Follow Me</h2>
               <ul class="footer-list">
-                  <li><a class="fab fa-facebook" target="_blank" href="https://www.facebook.com/kevin.dath"></a></li>
-                  <li><a class="fab fa-linkedin" target="_blank" href="https://www.linkedin.com/in/kevin-dath-3b294579"></a></li>
-                  <li><a class="fab fa-instagram" target="_blank" href="https://www.instagram.com/chimericano/"></a></li>
+                  <li><a class="fab fa-facebook" target="_blank" href="https://www.facebook.com/kevin.dath">facebook</a></li>
+                  <li><a class="fab fa-linkedin" target="_blank" href="https://www.linkedin.com/in/kevin-dath-3b294579">linkedin</a></li>
+                  <li><a class="fab fa-instagram" target="_blank" href="https://www.instagram.com/chimericano/">instagram</a></li>
                   <li><a class="twitter-follow-button" href="https://twitter.com/nachhaltbar?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @nachhaltbar</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></li>
                   <li class="copywrite"> &copy;2018 Kevin Dath</li>
               </ul>
