--- a/app/views/simple_pages/thank_you.html.erb
+++ b/app/views/simple_pages/thank_you.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-body">
     <br>
-    <p>Thank you. We have received your message and will respond as soon as possible.</p>
+    <p>Your message has been recieved.</p>
   </div><!-- / panel-body -->
 </div><!-- / panel -->
