--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,10 +91,9 @@
   padding-right: 10px;
   padding-top: 10px;
 }
- #search-bar {
-   padding-top: 50px;
-   padding-bottom: 20px;
-   float: right;}
+.alerts {padding-top: 35px;}
+.alert p {padding-top: 25px;}
+
  .form-fld{ width: 300px;}
 
 .alert {padding-top: 70px;}
