--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -3,6 +3,10 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-p {font-size: 1.5em;}
+
 
 .product {padding-top: 40px;}
+.productname {
+    font-size: 2.0em;
+    padding-top: 15px;
+}
