--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 
      <section class="left">
       <ul class="nav nav-pills">
-       <li class="nav-item"><%= link_to("Home", root_path) %>
+       <li class="nav-item"> <%= link_to("Vacationdestinations", root_path) %>
        </li>
 
      </section>
@@ -47,23 +47,20 @@
          <%= link_to('Login', new_user_session_path, class: "nav") %>
          </li>
          <% end %>
+         <li id="search-bar">
+             <%= form_with(url: products_path, method: 'get', local: true, class: 'search_bar') do |form| %>
+             <%= form.submit 'Search', class: 'btn btn-submit' %>
+             <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-fld' %>
+           <% end %>
+         </li>
       </ul>
 
      </section>
     </nav>
 
-    <div id="search-bar">
-        <%= form_with(url: products_path, method: 'get', local: true, class: 'search_bar') do |form| %>
-        <%= form.submit 'Search', class: 'btn btn-submit' %>
-        <%= form.text_field :q, id: 'q', value: params[:q], class: 'form-fld' %>
-      <% end %>
-    </div>
   <% if notice %>
     <p id="notice" class="alert alert-primary"><%= notice %></p>
   <% end %>
-  <% if alert %>
-    <p id="alert" class="alert alert-primary"><%= alert %></p>
-<% end %>
 
 
   <%= yield %>
