--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,29 +1,25 @@
 <div class="index-content">
   <div class="container">
-  <div class="row product" data-product-id="<%= @product.id %>">
-
-    <div class="col-sm-12 col-md-6 col-lg-6 productinfo-left">
+   <div class="row product" data-product-id="<%= @product.id %>">
+    <div class="col-sm-12 col-md-6 col-lg-6">
       <%= image_tag(@product.image_url, class: "img-fluid img-zoom", data_zoom_image:@product.image_url) if @product.image_url%>
       <%= link_to 'Edit', edit_product_path(@product) %> |
       <%= link_to 'Back', products_path %>
 
-    </div>
-    <div class="col-sm-12 col-lg-6">
-    <%= render 'shared/new_comment' %>
+      <p class="productname">
+        <%= @product.name %><br>
+        <p>
+          <%= @product.description %>
+        </p>
+        <p class="text-bold">Overview</p>
+        <p class="product-galleryprice-tag">
+        <%= number_to_currency(@product.price, :unit => "€") %></p>
+      <p>
+        <%= render 'shared/new_comment' %>
+      </p>
+      </div>
 
-    </div>
-    <div class="col-sm-12 col-md-6 col-lg-6 productinfo-right">
-      <p class="productname-show">
-        <%= @product.name %>
-      </p>
-      <p class="product-gallery-decription">
-        <%= @product.description %>
-      </p>
-      <p class="text-bold">Overview</p>
-      <p class="product-galleryprice-tag">
-        <%= number_to_currency(@product.price, :unit => "€") %>
-      </p>
-      <div class="star-rating">
+      <div class="col-sm-12 col-md-6 col-lg-6 star-rating">
       <p>Review score:<div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></p>
         </div>
         <% if !@product.highest_rating_comment.nil? %>
@@ -32,8 +28,6 @@
         <%= render 'shared/comments' %>
       </div>
     </div>
-
    </div>
   </div>
-
 </div>
