--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -19,6 +19,8 @@ h1 {
     border-radius: 0%;
 }
 
+.contact {padding-top: 35px;}
+
 #about {padding-top: 20px;}
 #about .row h2 {text-align: center;}
 #about .header h1 {
