--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container" id="about">
   <div>
-    <h1>Our Philosophy</h1>
+    <h1 class="About">Our Philosophy</h1>
     <p> Our Goal is to make your traveling goals as simple as possible. With a variety of options suitable for every budget. We find the deals so that you don't have to.</p>
    <section class="col-sm-12 col-lg-4">
 
