--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -10,3 +10,10 @@
     font-size: 2.0em;
     padding-top: 15px;
 }
+.productindex {
+    padding-top: 15px;
+    padding-bottom: 10px;
+  }
+  .description {
+    padding-top: 15px;
+  }
