--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -1,10 +1,10 @@
 
 
-<div class="col-sm col-md-6 col-lg-4">
+<div class="col-sm col-md-6 col-lg-4 productindex">
 
         <a href="#"><h3><%= product.name %></h3></a>
         <%= image_tag(product.image_url, class: "img-fluid") if product.image_url %>
-        <p><%= product.description %></p>
+        <p class="description"><%= product.description %></p>
         <p><%= product.colour %></p>
         <strong><td><%= product.price %></td></strong>
         <br>
