--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -3,8 +3,10 @@
         <div class="row">
             <hr>
             <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
-            <p><div class="rating"></div></p>
+            <p><div class="rated" data-score="<%= comment.rating %>"></div></p>
             <p><%= comment.body %></p>
+
+            <td><%= link_to 'Destroy', [comment.product, comment], method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </div>
     <% end %>
 </div>
