--- a/app/views/shared/_new_comment.html.erb
+++ b/app/views/shared/_new_comment.html.erb
@@ -7,7 +7,7 @@
     </p>
     <p><div class="rating">
       <%= f.label :rating %><br>
-      <%= f.text_field :rating, class: "rating" %>
+      <% f.text_field :rating, class: "rating" %>
       </div>
     </p>
     <p>
