--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -9,6 +9,6 @@
         <strong><td><%= product.price %></td></strong>
         <br>
         <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><% if signed_in? && current_user.admin? %><%= link_to 'Edit', edit_product_path(product) %><% end %></td>
+        <td><% if signed_in? && current_user.admin? %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><% end %></td>
 </div><!-- /col -->
