paginate show page

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -27,6 +27,7 @@
         <%= @product.highest_rating_comment.body %>
         <% end %>
         <%= render 'shared/comments' %>
+        <%= will_paginate @comments %>
         </div>
       </div>
     </div>
