--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="product">Products</h1>
-
+byebug
 <!-- Product menu -->
 
 <div class="container-fluid">
