--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -16,3 +16,9 @@ $(document).on('turbolinks:load', function(){
     }
   });
 });
+
+$(document).on('turbolinks:load', function() {
+    refreshRating();
+
+$('.img-zoom').elevateZoom();
+});
