--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@
 
  body {padding: 0;}
  body {background-color: #F7FAD8;}
-
+ img-fluid {padding-top: 30px;}
  img {
    border-style: ridge;
    border-radius: 10%;
