--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -5,7 +5,7 @@
 
 
 
-.product {padding-top: 40px;}
+.product {padding-top: 80px;}
 .productname {
     font-size: 2.0em;
     padding-top: 15px;
@@ -21,3 +21,4 @@
 #average-rating {padding-bottom: 50px;}
 
  .rated {padding: 15px;}
+ h2 {padding-top: 30px;}
