--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -2,8 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-h1 {
-  padding-top: 25px;
+.product {
+  padding-top: 80px;
   text-align: center;
 }
 
@@ -18,8 +18,6 @@ h1 {
     border: none;
     border-radius: 0%;
 }
-
-.contact {padding-top: 35px;}
 
 #about {padding-top: 20px;}
 #about .row h2 {text-align: center;}
