--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row product" data-product-id="<%= @product.id %>">
 
     <div class="col-sm-12 col-md-6 col-lg-6">
-      <%= image_tag(@product.image_url, class: "img-fluid img-zoom", data_zoom_image:@product.image_url) if @product.image_url%>
+      <%= image_tag(@product.image_url, class: "img-fluid img-zoom", data_zoom_image:"@product.image_url") if @product.image_url%>
       <%= link_to 'Edit', edit_product_path(@product) %> |
       <%= link_to 'Back', products_path %>
 
