--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,8 +3,8 @@
   <div class="row product" data-product-id="<%= @product.id %>">
 
     <div class="col-sm-12 col-md-6 col-lg-6">
-      <%= image_tag(@product.image_url, class: "img-fluid img-zoom", data_zoom_image:"@product.image_url") if @product.image_url%>
-      <%= link_to 'Edit', edit_product_path(@product) %> |
+      <%= image_tag(@product.image_url, width: "350", class: "img-fluid img-zoom", data_zoom_image:"@product.image_url") if @product.image_url%>
+      <%= link_to 'Edit', edit_product_path(@product) %>
       <%= link_to 'Back', products_path %>
 
     </div>
@@ -42,3 +42,4 @@
   </div>
 
 </div>
+<script src="jquery.elevatezoom.js" type="text/javascript"></script>
