--- a/app/views/shared/_product.html.erb
+++ b/app/views/shared/_product.html.erb
@@ -10,5 +10,6 @@
         <br>
         <td><%= link_to 'Show', product %></td>
         <td><% if signed_in? && current_user.admin? %><%= link_to 'Edit', edit_product_path(product) %><% end %></td>
-        <td><% if signed_in? && current_user.admin? %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><% end %></td>
+        <td><% if signed_in? && current_user.admin? %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><% end %>
+        </td>
 </div><!-- /col -->
