--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,9 @@
 
 <div class="container-fluid">
   <div class="row">
+    <% cache @products do %>
     <%= render partial: "shared/product", collection: @products %>
+    <% end %>
   </div>
 </div>
 
