--- a/app/views/simple_pages/about.html.erb
+++ b/app/views/simple_pages/about.html.erb
@@ -1,9 +1,13 @@
+
 <div class="container" id="about">
   <div>
     <h1 class="About product">Our Philosophy</h1>
     <p> Our Goal is to make your traveling goals as simple as possible. With a variety of options suitable for every budget. We find the deals so that you don't have to.</p>
    <section class="col-sm-12 col-lg-4">
-
    </section>
+   <% cache do %>
+     <% sleep 50 %>
+     <h1>Hello World!</h1>
+   <% end %>
   </div>
 </div>
