--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,10 +6,13 @@
 
 <div class="container-fluid">
   <div class="row">
-    <% cache @products do %>
-    <%= render partial: "shared/product", collection: @products %>
-    <% end %>
+    <% if @products.length > 0 %>
+     <% cache(cache_key_for_products) do %>
+       <%= render @products %>
+     <% end %>
+   <% elsif params[:q] %>
   </div>
 </div>
 
 <%= link_to 'New Product', new_product_path %>
+  <% end %>
