--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -119,35 +119,7 @@
  .proj-title { font-weight:100;}
 
 
- #contact {
-   padding-top: 10px;
-   padding-bottom: 60px;
- }
- #contact .contactimage {
-   background-image: url("../img/Zonza2.jpg");
-   padding-left: 20px;
-   padding-right: 20px;
-   padding-bottom: 15px;
-   background-attachment: fixed;
-   background-size: cover;
-   color: white;
- }
- #contact .contactimage .row {text-align: center;}
- #contact h1 {
-   text-align: center;
-   padding-top: 90px;
- }
- #contact p {
-   font-size: .7em;
-   font-weight: 900;
-   word-wrap: break-word;
-   color: #F3F3BE;
-   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
- }
- #contact .row {
-   display: flex;
-   align-items: center;
- }
+
 
  .form-group { width: 100%;}
  .form-control { width: 100%;}
@@ -159,7 +131,8 @@
    background: linear-gradient(to right, #7fbd98, #229d53);
    color: #fff;
    font-family: 'Poppins', sans-serif;
-   padding: none;
+   width: 100% !important;
+
  }
  .footer-title {
    font-size: 1.5rem;
