--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
     <hr>
     <p><%= comment.user.first_name %> <small><em><%= "#{time_ago_in_words(comment.created_at)} ago" %></em></small></p>
-    <p><div class="rated" data-score="<%= comment.rating %>"></div></p>
+    <div class="rated" data-score="<%= comment.rating %>"></div>
     <p><%= comment.body %></p>
     <br>
     <td><% if current_user && current_user.admin? %><%= link_to 'Destroy', [comment.product, comment], method: :delete, data: { confirm: 'Are you sure?' } %><% end %></td>
