--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -16,8 +16,7 @@ var refreshRating = function() {
   });
 };
 
-$(document).on('turbolinks:load', function() {
+$(document).on('turbolinks:load ajax:success', function() {
     refreshRating();
-
     $('.img-zoom').elevateZoom();
 });
