--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,16 +6,6 @@
         <%= image_tag(@product.image_url, width: "350", class: "img-fluid img-zoom", data_zoom_image:"@product.image_url") if @product.image_url%>
         <%= link_to 'Edit', edit_product_path(@product) %>
         <%= link_to 'Back', products_path %>
-
-      </div>
-      <div class="col-sm-12 col-lg-6">
-        <%= render 'shared/new_comment' %>
-        <%= form_with(url: '/payments/create') do |form| %>
-        <%= render partial: "shared/stripe_checkout_button" %>
-        <%= hidden_field_tag(:product_id, @product.id) %>
-        <% end %>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-6 productinfo-right">
         <% cache @product do %>
         <p>
           <%= @product.name %>
@@ -29,12 +19,25 @@
           <%= number_to_currency(@product.price, :unit => "€") %>
         </p>
 
+      </div>
+      <div class="col-sm-12  col-md-6 col-lg-6">
+        <%= render 'shared/new_comment' %>
+        <%= form_with(url: '/payments/create') do |form| %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+        <%= hidden_field_tag(:product_id, @product.id) %>
+        <% end %>
+      </div>
+
+
+      <div class= "row">
+
+
         <div class="star-rating">
           <p>Review score:<div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></p>
           </div>
 
-          <p><% if !@product.highest_rating_comment.nil? %></p>
-          <p><%= @product.highest_rating_comment.body %></p>
+          <p class= "star-rating"><% if !@product.highest_rating_comment.nil? %></p>
+          <p class= "body-rating"><%= @product.highest_rating_comment.body %></p>
           <% end %>
           <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
           <%= render 'shared/comments' %>
