--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
         </p>
         <% end %>
         <p class="text-bold">Overview</p>
-        <p class="product-galleryprice-tag">
+        <p class="price-tag">
           <%= number_to_currency(@product.price, :unit => "€") %>
         </p>
 
