--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -6,11 +6,12 @@
         <%= image_tag(product.image_url, class: "img-fluid") if product.image_url %>
         <p class="description"><%= product.description %></p>
         <p><%= product.colour %></p>
-        <strong><td><%= product.price %></td></strong>
+        <strong><td><%= number_to_currency(product.price, :unit => "€") %></td></strong>
         <br>
         <td><%= link_to 'Show', product %></td>
         <td><% if signed_in? && current_user.admin? %><%= link_to 'Edit', edit_product_path(product) %><% end %></td>
         <td><% if signed_in? && current_user.admin? %><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %><% end %>
         </td>
+        <% end %>
+
 </div><!-- /col -->
-<% end %>
