--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,7 +61,7 @@
    font-family: 'Oswald', Helvetica, Arial, sans-serif;
    font-weight: 300;
    background: #FC4C7D;  /* fallback for old browsers */
-   background: linear-gradient(to right, #B3EFFE, #13CFFE);
+   background: linear-gradient(to right, #7fbd98, #13CFFE);
    width: 100% !important;
    position: fixed;
    left: 0;
@@ -123,7 +123,7 @@
  /*Footer Section*/
 
 .footer-section{
-   background: linear-gradient(to right, #7fbd98, #229d53);
+   background: linear-gradient(to right, #7fbd98, #13CFFE);
    color: #fff;
    font-family: 'Poppins', sans-serif;
    width: 100% !important;
@@ -134,6 +134,7 @@
 
 
  @media (max-width: 970px) {
+/*   .full-text { display: none; } */
    #work .container .img-fluid {
      margin: 0; }
    #resume .btn { float: right;}
@@ -147,7 +148,7 @@
  }
 
  @media (max-width: 750px) {
-   .full-text { display: none; }
+/*   .full-text { display: none; } */
    .container {padding: 3%;}
    .short-text {
      display: inline-block;
