--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -17,8 +17,7 @@
         <%= image_tag(product.image_url, class: "img-fluid", id: "carousel_images") %>
 
         <div class="carousel-caption d-none d-md-block">
-          <h4><%= link_to product.name, product %></h4>
-          <p><%= link_to product.price, product %></p>
+          <<h3 class="landing-name"><%= link_to product.name, product %></h3>
         </div>
       </div>
       <% end %>
