stripe checkout button set to user only

--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -1,3 +1,4 @@
+<% if signed_in? %>
 <script
   src="https://checkout.stripe.com/checkout.js" class="stripe-button"
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
@@ -7,3 +8,4 @@
   data-amount="<%= @product.price.to_i*100 %>"
   data-currency="eur">
 </script>
+<% end %>
