--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -17,7 +17,7 @@
   .description {
     padding-top: 15px;
   }
-
+.margin { margin: 20px 30px 10px 30px;}
 
 
 #average-rating {padding-bottom: 50px;}
