--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,15 +1,17 @@
-<p id="notice"><%= notice %></p>
+<div class= "margin">
+  <p id="notice"><%= notice %></p>
 
-<h1 class="product">Products</h1>
+  <h1 class="product">Products</h1>
 
-<!-- Product menu -->
+  <!-- Product menu -->
 
-<div class="container-fluid">
-  <div class="row">
-    <% if @products.length > 0 %>
-    <% cache(cache_key_for_products) do %>
-    <%= render @products %><% end %>
-    <% elsif params[:q] %><% end %>
+  <div class="container-fluid">
+    <div class="row">
+      <% if @products.length > 0 %>
+      <% cache(cache_key_for_products) do %>
+      <%= render @products %><% end %>
+      <% elsif params[:q] %><% end %>
+    </div>
   </div>
+  <% if signed_in? && current_user.admin? %><%= link_to 'New Product', new_product_path %><% end %>
 </div>
-<% if signed_in? && current_user.admin? %><%= link_to 'New Product', new_product_path %><% end %>
