comments display clean-up - incomplete

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -24,3 +24,10 @@
 
  .rated {padding: 15px;}
  h2 {padding-top: 30px;}
+
+ img {float: left;
+ padding: 20px;
+}
+.comment-name {float: left;
+padding: 20px;
+text-align: left;}
