--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -4,8 +4,6 @@
 
 
 .new_comment {padding: 20px 0px 20px 0px}
-
-.product {padding-top: 80px;}
 .productname {
     font-size: 2.0em;
     padding-top: 15px;
@@ -17,7 +15,7 @@
   .description {
     padding-top: 15px;
   }
-.margin { margin: 20px 30px 10px 30px;}
+
 
 
 #average-rating {padding-bottom: 50px;}
@@ -28,6 +26,7 @@
  img {float: left;
  padding: 20px;
 }
-.comment-name {float: left;
+.comment-name {float: right;
 padding: 20px;
 text-align: left;}
+.comment-rating {float: left;}
