--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -9,10 +9,10 @@
 
    <section class="right">
       <ul class="nav nav-pills">
-
-        <li class="nav-item"> <%= link_to("About", simple_pages_about_path) %><i class="fas fa-book-reader"></i>
         <li class="nav-item"> <%= link_to("Products", products_path) %>
-        <li class="nav-item"> <%= link_to("Contact", simple_pages_contact_path) %><i class="fas fa-phone"></i>
+        <li class="nav-item"> <%= link_to("About", simple_pages_about_path) %></li>
+        <li class="nav-item"> <%= link_to("My Orders", orders_path) %></li>
+        <li class="nav-item"> <%= link_to("Contact", simple_pages_contact_path) %>
         <% if user_signed_in? %>
         <li class="nav-item">
         <%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav") %>
@@ -44,7 +44,7 @@
         <ul class="nav nav-pills">
          <li class="nav-item"> <%= link_to("Products", products_path) %></li>
          <li class="nav-item"> <%= link_to("About", simple_pages_about_path) %></li>
-
+         <li class="nav-item"> <%= link_to("My Orders", orders_path) %></li>
          <li class="nav-item"> <%= link_to("Contact", simple_pages_contact_path) %></li>
          <% if user_signed_in? %>
          <li class="nav-item"><%= link_to('Logout', destroy_user_session_path, method: :delete, class: "nav") %></li>
