--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
  .container-fluid {
    padding: 0%;
  }
+ .margin { margin: 90px 30px 10px 30px;}
  .short-text {display: none;}
 
  body {
@@ -37,7 +38,7 @@
    font-family: 'Oswald', sans-serif;
    font-weight: 900;
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-   color: #F3F3BE;
+   color: #6BC9E6;
   }
   h2{
     font-family: 'Oswald', sans-serif;
@@ -110,7 +111,7 @@
   padding-right: 10px;
   padding-top: 10px;
 }
-.margin { margin: 50px 30px 10px 30px;}
+
 
  /*Simple-pages */
 
