--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<div class="margin">
 <p id="notice"><%= notice %></p>
 
 <h1>Users</h1>
@@ -26,4 +27,5 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+  <% if signed_in? && current_user.admin? %><%= link_to 'New User', new_user_path %><% end %>
+</div>
